add contenu discussion

--- a/templates/about/index.html.twig
+++ b/templates/about/index.html.twig
@@ -4,6 +4,6 @@
 	من نحن
 {% endblock %}
 
-{% block content %}
+{% block page_content %}
 	{% include 'common/about.html.twig' with {'about': about} %}
 {% endblock %}
