--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -58,6 +58,16 @@
 				</li>
 
 				<li>
+					<a href="{{ path('app_admin_contenu_discussion_index') }}" class="flex items-center gap-3 px-3 py-2 rounded-lg transition-colors duration-200 {{ app.request.pathinfo starts with path('app_admin_contenu_discussion_index') ? 'bg-white text-[#A81B60]' : 'text-white hover:bg-white hover:text-[#A81B60]' }}">
+						<svg width="24" height="25" viewbox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M20 19.2852V16.2852H7C5.34315 16.2852 4 17.6283 4 19.2852M8.8 22.2852H16.8C17.9201 22.2852 18.4802 22.2852 18.908 22.0672C19.2843 21.8754 19.5903 21.5695 19.782 21.1931C20 20.7653 20 20.2053 20 19.0852V5.48516C20 4.36505 20 3.805 19.782 3.37718C19.5903 3.00085 19.2843 2.69489 18.908 2.50314C18.4802 2.28516 17.9201 2.28516 16.8 2.28516H8.8C7.11984 2.28516 6.27976 2.28516 5.63803 2.61214C5.07354 2.89976 4.6146 3.3587 4.32698 3.92318C4 4.56492 4 5.405 4 7.08516V17.4852C4 19.1653 4 20.0054 4.32698 20.6471C4.6146 21.2116 5.07354 21.6706 5.63803 21.9582C6.27976 22.2852 7.11984 22.2852 8.8 22.2852Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+						</svg>
+
+						حوار العدد
+					</a>
+				</li>
+
+				<li>
 					<a href="{{ path('app_texte_index') }}" class="flex items-center gap-3 px-3 py-2 rounded-lg transition-colors duration-200 {{ app.request.pathinfo starts with path('app_texte_index') ? 'bg-white text-[#A81B60]' : 'text-white hover:bg-white hover:text-[#A81B60]' }}">
 						<svg width="24" height="25" viewbox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M20 19.2852V16.2852H7C5.34315 16.2852 4 17.6283 4 19.2852M8.8 22.2852H16.8C17.9201 22.2852 18.4802 22.2852 18.908 22.0672C19.2843 21.8754 19.5903 21.5695 19.782 21.1931C20 20.7653 20 20.2053 20 19.0852V5.48516C20 4.36505 20 3.805 19.782 3.37718C19.5903 3.00085 19.2843 2.69489 18.908 2.50314C18.4802 2.28516 17.9201 2.28516 16.8 2.28516H8.8C7.11984 2.28516 6.27976 2.28516 5.63803 2.61214C5.07354 2.89976 4.6146 3.3587 4.32698 3.92318C4 4.56492 4 5.405 4 7.08516V17.4852C4 19.1653 4 20.0054 4.32698 20.6471C4.6146 21.2116 5.07354 21.6706 5.63803 21.9582C6.27976 22.2852 7.11984 22.2852 8.8 22.2852Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
