--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,7 +4,7 @@
 	{{ article.titre }}
 {% endblock %}
 
-{% block content %}
+{% block page_content %}
 	<section class="py-24 bg-white" dir="rtl">
 		<div class="max-w-4xl mx-auto px-6">
 			{% if article.image %}
