--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -17,9 +17,12 @@
 
 	<div class="max-w-7xl mx-auto px-6 relative z-10">
 		<div class="text-center space-y-8">
-			<div class="text-center font-bold">
-				<img src="{{ asset('build/images/logo.svg') }}" alt="Logo" class="w-28 h-28 mx-auto">
-			</div>
+			<a href="{{ path('home') }}">
+				<div class="text-center font-bold">
+					<img src="{{ asset('build/images/logo.svg') }}" alt="Logo" class="w-28 h-28 mx-auto">
+				</div>
+
+			</a>
 			<p class="text-xl max-w-3xl mx-auto">
 				مجلة نسائية ثقافية شهرية تعنى بالإبداع النسائي
 				<br><br>
