--- a/templates/security/resetPassword/emailForm.html.twig
+++ b/templates/security/resetPassword/emailForm.html.twig
@@ -1,35 +1,35 @@
 {% extends 'auth.html.twig' %}
 
 {% block title %}
-	{{ 'resetPassword.title'|trans }}
+	استعادة كلمة المرور
 {% endblock %}
 
 {% block content %}
-	<div id="loginForm" class="form-container max-w-md mx-auto w-full">
+	<div id="loginForm" class="form-container max-w-md mx-auto w-full" dir="rtl">
 
 		<h1 class="text-2xl text-center md:text-3xl font-semibold text-midnight mb-3">
-			{{ 'resetPassword.title'|trans }}
+			استعادة كلمة المرور
 		</h1>
 		<p class="text-steel mb-6 md:mb-8 text-sm md:text-base text-center">
-			{{ 'resetPassword.subtitle'|trans|raw }}
+			أدخل بريدك الإلكتروني وسنرسل لك رابطاً لإعادة تعيين كلمة المرور الخاصة بك.
 		</p>
 		{{ form_errors(form) }}
 
 
 		{{ form_start(form) }}
 
-		{{ form_row(form.email) }}
+		{{ form_row(form.email, {'label': 'البريد الإلكتروني', 'label_attr': {'class': 'block text-sm text-gray-700 mb-2 text-right'}}) }}
 
-		<button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-[#A81B60]-700 active:bg-[#A81B60]-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60]-600 focus:ring-offset-2" type="submit">
-			{{ 'resetPassword.button'|trans }}
+		<button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-opacity-90 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60] focus:ring-offset-2" type="submit">
+			إرسال رابط الاستعادة
 		</button>
 
 		{{ form_end(form) }}
 
 		<p class="mt-6 text-center text-steel text-sm md:text-base">
-			<a href="{{ path('app_login') }}" class="text-grey-600 hover:text-primary-700 font-medium flex items-center justify-center gap-2">
-				<img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block"/>
-				{{ 'resetPassword.backToLogin'|trans }}
+			<a href="{{ path('app_login') }}" class="text-grey-600 hover:text-[#A81B60] font-medium flex items-center justify-center gap-2">
+				<img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block scale-x-[-1]"/>
+				العودة إلى تسجيل الدخول
 			</a>
 		</p>
 	</div>
