--- a/templates/security/resetPassword/newPassword.html.twig
+++ b/templates/security/resetPassword/newPassword.html.twig
@@ -1,19 +1,18 @@
 {% extends 'auth.html.twig' %}
 
 {% block title %}
-	{{ 'resetPassword.title'|trans }}
+	استعادة كلمة المرور
 {% endblock %}
 
 {% block content %}
-	<div id="loginForm" class="form-container max-w-md mx-auto w-full">
+	<div id="loginForm" class="form-container max-w-md mx-auto w-full" dir="rtl">
 
 
 		<h1 class="text-2xl text-center md:text-3xl font-bold text-midnight mb-3">
-
-			{{ 'resetPassword.messageAfterSubmit.form.title'|trans }}
+			تعيين كلمة مرور جديدة
 		</h1>
 		<p class="text-steel mb-6 md:mb-8 text-sm md:text-base text-center">
-			{{ 'resetPassword.messageAfterSubmit.form.message'|trans|raw }}
+			يرجى إدخال كلمة المرور الجديدة وتأكيدها أدناه.
 		</p>
 
 		{{ form_errors(form) }}
@@ -22,29 +21,27 @@
 
 
 		<div class="space-y-2">
-			{{ form_label(form.plainPassword.first, null, {'attr': {'class': 'block text-sm text-gray-700 required'}}) }}
-			{{ form_widget(form.plainPassword.first, {'attr': {'class': 'w-full px-4 py-2.5 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-600 focus:border-transparent text-sm md:text-base placeholder-gray-500'}}) }}
+			{{ form_label(form.plainPassword.first, 'كلمة المرور الجديدة', {'attr': {'class': 'block text-sm text-gray-700 required text-right'}}) }}
+			{{ form_widget(form.plainPassword.first, {'attr': {'class': 'w-full px-4 py-2.5 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#A81B60] focus:border-transparent text-sm md:text-base placeholder-gray-500'}}) }}
 			{{ form_errors(form.plainPassword.first) }}
-			<p class=" text-[12px] font-medium text-gray-700">{{ 'resetPassword.messageAfterSubmit.form.password.remarque'|trans }}</p>
+			<p class=" text-[12px] font-medium text-gray-700 text-right">يجب أن تتكون كلمة المرور من 6 أحرف على الأقل</p>
 		</div>
 
 		<div class="mt-6 space-y-2">
-			{{ form_label(form.plainPassword.second, null, {'attr': {'class': 'block text-sm text-gray-700 required'}}) }}
-			{{ form_widget(form.plainPassword.second, {'attr': {'class': 'w-full px-4 py-2.5 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary-600 focus:border-transparent text-sm md:text-base placeholder-gray-500'}}) }}
+			{{ form_label(form.plainPassword.second, 'تأكيد كلمة المرور الجديدة', {'attr': {'class': 'block text-sm text-gray-700 required text-right'}}) }}
+			{{ form_widget(form.plainPassword.second, {'attr': {'class': 'w-full px-4 py-2.5 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-[#A81B60] focus:border-transparent text-sm md:text-base placeholder-gray-500'}}) }}
 			{{ form_errors(form.plainPassword.second) }}
 		</div>
 
-		{#        {{ form_row(form.plainPassword) }} #}
-
-		<button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-[#A81B60]-700 active:bg-[#A81B60]-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60]-600 focus:ring-offset-2" type="submit">
-			{{ 'resetPassword.messageAfterSubmit.form.button'|trans }}
-
+		<button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-opacity-90 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60] focus:ring-offset-2" type="submit">
+			حفظ كلمة المرور
 		</button>
 		{{ form_end(form) }}
+
 		<p class="mt-6 text-center text-steel text-sm md:text-base">
-			<a href="{{ path('app_login') }}" class="text-grey-600 hover:text-primary-700 font-medium flex items-center justify-center gap-2">
-				<img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block"/>
-				{{ 'resetPassword.backToLogin'|trans }}
+			<a href="{{ path('app_login') }}" class="text-grey-600 hover:text-[#A81B60] font-medium flex items-center justify-center gap-2">
+				<img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block scale-x-[-1]"/>
+				العودة إلى تسجيل الدخول
 			</a>
 		</p>
 	</div>
