--- a/templates/home/sections/authors.html.twig
+++ b/templates/home/sections/authors.html.twig
@@ -1,8 +1,9 @@
 <!-- Opinion Writers Section -->
-<section class="py-24 bg-gray-50" id="writers">
+<section class="py-24 bg-gray-50" id="writers" dir="rtl">
 	<div class="max-w-7xl mx-auto px-6">
 		<h2 class="text-5xl font-bold text-center mb-4">
-			<span class="pink-underline">كتاب الرأي</span>
+			<span class="pink-underline">آراء
+			</span>
 		</h2>
 		<p class="text-center text-gray-600 text-xl mb-16">
 			أصوات مبدعة من مختلف أنحاء العالم
