--- a/templates/home/sections/numero.html.twig
+++ b/templates/home/sections/numero.html.twig
@@ -34,8 +34,26 @@
 						</svg>
 					</div>
 				</div>
+				{% if contenuDiscussion is defined and contenuDiscussion is not empty %}
+					<div class="bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border border-[#E5E7EB] p-6 rounded-2xl flex items-center gap-4 justify-between border-gray-100">
+						<a href="{{ path('app_contenu_discussion_show', {'id': contenuDiscussion.id}) }}" class="text-right flex-1 text-rose-600 block group">
+							<div class="text-right flex-1">
+								<h3 class="text-2xl font-bold mb-2 group-hover:text-rose-600 transition-colors">{{ contenuDiscussion.title }}</h3>
+								<p class="text-gray-600">
+									{{ contenuDiscussion.subTitle }}
+								</p>
+							</div>
+						</a>
+						<div class="flex-shrink-0 w-10 h-10 flex items-center justify-center">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-rose-500 w-6 h-6">
+								<path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
+							</svg>
+						</div>
+					</div>
+				{% endif %}
 
-				<div class="bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border border-[#E5E7EB] p-6 rounded-2xl flex items-center gap-4 justify-between border-gray-100">
+
+				<div class="bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border border-[#FECDD3] rounded-2xl p-6 flex items-center gap-4 justify-between">
 					<a href="{{ path('app_contenu_numero_list', {'id': contenu.id}) }}" class="text-right flex-1 block group">
 						<div class="text-right flex-1">
 							<h3 class="text-2xl font-bold mb-2 group-hover:text-rose-600 transition-colors">ملف العدد</h3>
@@ -52,23 +70,6 @@
 					</div>
 				</div>
 
-				{% if contenuDiscussion is defined and contenuDiscussion is not empty %}
-					<div class="bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border border-[#FECDD3] rounded-2xl p-6 flex items-center gap-4 justify-between">
-						<a href="{{ path('app_contenu_discussion_show', {'id': contenuDiscussion.id}) }}" class="text-right flex-1 block group">
-							<div class="text-right flex-1">
-								<h3 class="text-2xl font-bold mb-2 group-hover:text-rose-600 transition-colors">{{ contenuDiscussion.title }}</h3>
-								<p class="text-gray-600">
-									{{ contenuDiscussion.subTitle }}
-								</p>
-							</div>
-						</a>
-						<div class="flex-shrink-0 w-10 h-10 flex items-center justify-center">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-rose-500 w-6 h-6">
-								<path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
-							</svg>
-						</div>
-					</div>
-				{% endif %}
 
 				<div class={% if contenuDiscussion is defined and contenuDiscussion is not empty %} "bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border border-[#E5E7EB] p-6 rounded-2xl flex items-center gap-4 justify-between border-gray-100" {%else%} "bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border border-[#FECDD3] rounded-2xl p-6 flex items-center gap-4 justify-between" {%endif%}>
 					<div class="text-right flex-1">
@@ -88,10 +89,10 @@
 				{% for text in textes %}
 					<a href="{{ path('app_texte_show_front', {'id': text.id}) }}" class="group">
 						<div class="mt-4 border rounded-2xl p-6 flex items-center gap-4 justify-between shadow-custom hover:opacity-90 transition-all
-																																																																																								 {{ loop.index is not even ?
-																																																																																								 'bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border-[#FECDD3]':
-																																																																																								 'bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border-[#E5E7EB]'
-																																																																																								 }}">
+																																																																															 {{ loop.index is not even ?
+																																																																																'bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border-[#FECDD3]':
+																																																																																'bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border-[#E5E7EB]'
+																																																																															 }}">
 							<div class="text-right flex-1">
 								<h3 class="text-2xl font-bold mb-2 group-hover:text-rose-600 transition-colors">{{ text.title }}</h3>
 								<p class="text-gray-600">
@@ -103,25 +104,34 @@
 					</a>
 				{% endfor %}
 
+				{% for audio in audios %}
+					<a href="{{ path('app_texte_show_front', {'id': audio.id}) }}" class="group">
+						<div class="mt-8 border rounded-2xl p-6 flex items-center gap-4 justify-between shadow-custom hover:opacity-90 transition-all
+																																																							 {{ loop.index is not even ?
+																																																								'bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border-[#FECDD3]':
+																																																								'bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border-[#E5E7EB]'
+																																																							 }}">
+							<div class="text-right flex-1">
+								<div class="flex items-center justify-end gap-2 mb-2">
+									<h3 class="text-2xl font-bold group-hover:text-rose-600 transition-colors">{{ audio.title }}</h3>
+								</div>
+								<p class="text-gray-600">
+									{{ audio.subTitle }}
+								</p>
+							</div>
+							<div class="flex-shrink-0 w-10 h-10 flex items-center justify-center">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-rose-500 w-6 h-6">
+									<path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
+									<path d="M19 10v1a7 7 0 0 1-14 0v-1"></path>
+									<line x1="12" y1="19" x2="12" y2="23"></line>
+									<line x1="8" y1="23" x2="16" y2="23"></line>
+								</svg>
+							</div>
+						</div>
+					</a>
+				{% endfor %}
 
-				<a href="#writers" class="block group mt-4">
-					<div class="{{ textes|length is even ? 'bg-[linear-gradient(135deg,#FFF1F2_0%,rgba(255,228,230,0.5)_100%)] border-[#FECDD3]' : 'bg-[linear-gradient(135deg,#F9FAFB_0%,#FFFFFF_100%)] border-[#E5E7EB]' }} rounded-2xl p-6 shadow-custom flex items-center gap-4 justify-between border hover:opacity-95 transition-all duration-300 cursor-pointer">
-						<div class="text-right flex-1">
-							<h3 class="text-2xl font-bold mb-2 group-hover:text-rose-600 transition-colors">تقارير أوال فيمينا</h3>
-							<p class="text-gray-600">
-								تقارير شاملة حول قضايا المرأة والمجتمع
-							</p>
-						</div>
-						<div class="flex-shrink-0 w-10 h-10 flex items-center justify-center">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-rose-500 w-6 h-6">
-								<path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"/>
-								<path d="M18 14h-8"/>
-								<path d="M15 18h-5"/>
-								<path d="M10 6h8v4h-8V6Z"/>
-							</svg>
-						</div>
-					</div>
-				</a>
+
 			</div>
 		</div>
 	</div>
