--- a/templates/texte/_form.html.twig
+++ b/templates/texte/_form.html.twig
@@ -110,7 +110,26 @@ toolbar: [
 'codeview', 'help'
 ]
 ]
-]
+],
+callbacks: {
+onChange: function (contents) {
+const isArabic = /[\u0600-\u06FF]/.test(contents);
+const direction = isArabic ? 'rtl' : 'ltr';
+const textAlign = isArabic ? 'right' : 'left';
+const $editable = $('.note-editable');
+$editable.attr('dir', direction);
+$editable.css('text-align', textAlign);
+},
+onInit: function () {
+const contents = element.val();
+const isArabic = /[\u0600-\u06FF]/.test(contents);
+const direction = isArabic ? 'rtl' : 'ltr';
+const textAlign = isArabic ? 'right' : 'left';
+const $editable = $('.note-editable');
+$editable.attr('dir', direction);
+$editable.css('text-align', textAlign);
+}
+}
 });
 }
 
@@ -227,7 +246,12 @@ initSummernote();
 <div class="flex flex-col gap-4">
 	{{ form_row(form.title) }}
 	{{ form_row(form.subTitle) }}
-	{{ form_row(form.content) }}
+	{{ form_row(form.type) }}
+	{% set contentDir = 'ltr' %}
+	{% if form.vars.value.content is defined and form.vars.value.content matches '/[\\x{0600}-\\x{06FF}]/u' %}
+		{% set contentDir = 'rtl' %}
+	{% endif %}
+	{{ form_row(form.content, {'attr': {'dir': contentDir}}) }}
 </div>
 
 <div class="flex flex-col md:flex-row items-start md:items-center mt-6 border-t pt-4 border-gray-300 gap-4 md:gap-0">
