show content selon langue

--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -78,8 +78,9 @@
 
 			{% if article.content %}
 				<!-- Content -->
-				<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border border-[#FECDD3]">
-					<div class="prose prose-lg prose-rose max-w-none mx-auto text-gray-700 leading-relaxed text-justify mb-8 [&_*]:!bg-transparent">
+				{% set isArabic = article.content matches '/[\\x{0600}-\\x{06FF}]/u' %}
+				<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border border-[#FECDD3]" dir="{{ isArabic ? 'rtl' : 'ltr' }}">
+					<div class="prose prose-lg prose-rose max-w-none mx-auto text-gray-700 leading-relaxed {{ isArabic ? 'text-right' : 'text-justify' }} mb-8 [&_*]:!bg-transparent">
 						{{ article.content|raw }}
 					</div>
 				</div>
