--- a/templates/admin/admin_article/index.html.twig
+++ b/templates/admin/admin_article/index.html.twig
@@ -12,7 +12,7 @@
             <div class="flex flex-wrap justify-between items-center gap-4">
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">
-                    تقارير آوال فيمينا
+                        آراء آوال فيمينا
                 </h1>
                 </div>
                <a href="{{ path('app_admin_article_new') }}"
@@ -20,7 +20,7 @@
                     <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
                         <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd"></path>
                     </svg>
-                   اضافة تقرير جديد
+                   اضافة رأي جديد
                 </a>
             </div>
             <hr class="text-gray-300 mt-4 mb-2">
